tests/error/undef_parent.gw
// [contains] undefined parent class
 class C extends Undefined {}
